--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,50 @@
+/* Global CSS */
 * {
     margin: 0px;
-    padding: 0px;
+    padding: 0px
 }
 
-:root,
-html,
-body {
-    height: 100%;
+:root {
     font-size: 16px;
 }
 
 body {
-    display: flex;
+    min-height: 100vh;
+
+    display: grid;
+    grid: 1fr / 1fr 4fr;
 }
 
+h2 {
+    padding: 0 0 1rem 0;
+}
+
+a {
+    color: black;
+}
+
+a:active {
+    color: rgb(221 211 4);
+}
+
+
+/* Side-Bar */
+
 .side-bar-container {
-    height: 100%;
-    width: 20%;
-    padding: 0px 50px;
+    padding: 0px 3rem;
     display: grid;
-    grid: 80px 240px 240px 1fr / 1fr;
-    gap: 20px;
+    grid: 6rem 1fr 10rem / 1fr;
+    gap: 4rem;
 
     background-color: rgb(17, 162, 206);
 }
 
 .side-bar-container button {    
     background-color: transparent;
-    border: 0px;
+    border: 0;
 
     color: white;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     text-align: left;
 }
 
@@ -38,88 +52,151 @@ body {
     background-color: transparent;
     border: 0px;
 
-    color: gold;
-    font-size: 1.3rem;
-    text-align: left;
+    color: rgb(199, 199, 199);
+    font-size: 1.4rem;
 }
 
-.primary-buttons {
-    height: 240px;
-
+.side-bar-button-container {
     display: grid;
-    grid: repeat(6, 1fr) / 1fr 2fr;
-    gap: 5px;
+    grid: repeat(6, 1fr) 4fr repeat(3, 1fr) / 1fr 3fr;
+    gap: 1rem;
+
+    font-size: 1.5rem;
+    text-align: center;
+    align-items: center;
 }
 
-.secondary-buttons {
-    height: 120px;
-    padding: 60px 0 0 0;
-
-    display: grid;
-    grid: repeat(3, 1fr) / 1fr 2fr;
-    gap: 10px;
-}
+/* Content */
+/* Contains the header & body */
 
 .content-container {
-    height: 100%;
-    width: 80%;
-
     display: grid;
-    grid: 200px 1fr / 1fr;
+    grid: 12rem 1fr / 1fr;
 
     background-color: lightgray;
 }
 
+/*- Header -*/
+
 .header-container {
-    padding: 16px;
+    padding: 1rem;
 
     display: grid;
-    grid: repeat(2, 1fr) / repeat(12, 1fr);
-
+    grid: 1fr / 2fr 1fr ;
+    gap: 1rem;
+    
     background-color: white;
 }
+ 
+/*-- Search Container --*/
+
+.header-search-container {
+    display: flex;
+    align-items: center;
+
+    font-size: 1.5rem;
+}
+
+.searchbar-element  {
+    height: 2rem;
+    width: 100%;
+
+    padding-left: 0.9rem;
+
+    border-radius: 1rem;
+    border: 0;
+    background-color: lightgray;
+}
+
+/* Header Profile Container */
+
+/* Header Info Container */
+
+.header-info-container {
+    display: flex;
+    align-items:flex-end;
+}
+
+.header-info-container img {
+    margin: 0 1rem 1rem 0;
+    width: 100px;
+    
+    border-radius: 360px;
+    transform: rotate(14deg);
+}
+
+/*-- Buttons Container --*/
+
+.header-buttons-container {
+    display: grid;
+    grid: 1fr / repeat(3, 1fr);
+    gap: 2rem;
+
+    align-items: center;
+}
+
+.header-buttons-container button {
+    height: 3rem;
+
+    border: 1px solid darkblue;
+    border-radius: 2rem;
+    background-color: rgb(17, 162, 206);
+
+    color:white;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.header-buttons-container button:hover {
+    background-color: rgb(25, 140, 175); 
+}
+
+.header-buttons-container button:active {
+    color:rgb(192, 192, 192);
+    background-color: rgb(35, 115, 139);
+    transform: scale(0.95, 0.95);
+}
+
+
+/*- Body -*/
 
 .body-container {
-    padding: 16px;
-    gap: 16px;
-
     display: grid;
-    grid: auto 1fr / repeat(4, 1fr);
+    grid: 2rem 1fr / 3fr 1fr;
+
+    padding: 1rem;
+    gap: 1rem;
 }
 
-.side-container {
-    grid-column: 4;
-
+.body-project-container {
     display: grid;
-    grid: auto 20px auto / 1fr;
-    gap: 16px;
-}
-
-#h2-announce {
-    grid-column: 4;
-}
-
-.announcements {
-    background-color: white;
-    border-radius: 10px;
-}
-
-.trending {
-    background-color: white;
-    border-radius: 10px;
-}
-
-.project-container {
-    grid-column: span 3;
-
-    display: grid;
-    grid: repeat(3, 1fr) / repeat(2, 1fr);
-    gap: 16px;
+    grid-template-columns: repeat(auto-fill, minmax(24rem, 1fr));
+    gap: 1rem;
 }
 
 .project-element {
-    padding: 16px;
+    padding: 1rem;
 
-    border: solid red;
+    display: grid;
+    grid: 1fr 2rem / 1fr;
+    justify-items: right;
+
     background-color: white;
+    border-left: 6px solid rgb(221 211 4);
+    border-radius: 10px;
 }
+
+.body-side-container {
+    display: flex;
+}
+
+.announcement-container {
+    background-color: white;
+    border-radius: 10px;
+}
+
+.trending-container {
+    background-color: white;
+    border-radius: 10px;
+}
+
