--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 :root {
     font-size: 16px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 body {
@@ -13,10 +14,6 @@ body {
 
     display: grid;
     grid: 1fr / 1fr 4fr;
-}
-
-h2 {
-    padding: 0 0 1rem 0;
 }
 
 a {
@@ -28,18 +25,18 @@ a:active {
 }
 
 
-/* Side-Bar */
+/* nav-bar */
 
-.side-bar-container {
+.nav-bar-container {
     padding: 0px 3rem;
     display: grid;
     grid: 6rem 1fr 10rem / 1fr;
     gap: 4rem;
-
+    
     background-color: rgb(17, 162, 206);
 }
 
-.side-bar-container button {    
+.nav-bar-container button {    
     background-color: transparent;
     border: 0;
 
@@ -48,7 +45,7 @@ a:active {
     text-align: left;
 }
 
-.side-bar-container button:active {    
+.nav-bar-container button:active {    
     background-color: transparent;
     border: 0px;
 
@@ -56,9 +53,9 @@ a:active {
     font-size: 1.4rem;
 }
 
-.side-bar-button-container {
+.nav-bar-button-container {
     display: grid;
-    grid: repeat(6, 1fr) 4fr repeat(3, 1fr) / 1fr 3fr;
+    grid: repeat(6, minmax(5px, 20px)) 80px repeat(3, minmax(5px, 20px)) / 1fr 3fr;
     gap: 1rem;
 
     font-size: 1.5rem;
@@ -66,12 +63,25 @@ a:active {
     align-items: center;
 }
 
+.footer {
+    padding: 1rem;
+    
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+
+    gap: 1rem;
+
+    font-weight: bold;
+    font-size: 1.1rem;
+}
+
 /* Content */
 /* Contains the header & body */
 
 .content-container {
     display: grid;
-    grid: 12rem 1fr / 1fr;
+    grid: 1fr 4fr / 1fr;
 
     background-color: lightgray;
 }
@@ -87,8 +97,12 @@ a:active {
     
     background-color: white;
 }
+
+.header-container img {
+    border-radius: 360px;
+}
  
-/*-- Search Container --*/
+/*-- Header Search Container --*/
 
 .header-search-container {
     display: flex;
@@ -108,21 +122,33 @@ a:active {
     background-color: lightgray;
 }
 
+
 /* Header Profile Container */
+.header-profile-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+
+    font-weight: bold;
+}
+
+.header-profile-container img {
+    width: 60px;
+    
+}
 
 /* Header Info Container */
 
 .header-info-container {
     display: flex;
-    align-items:flex-end;
+    align-items: flex-end;
 }
 
 .header-info-container img {
-    margin: 0 1rem 1rem 0;
-    width: 100px;
+    margin: 0 1rem 0 0;
+    width: 80px;
     
-    border-radius: 360px;
-    transform: rotate(14deg);
+    
 }
 
 /*-- Buttons Container --*/
@@ -165,12 +191,13 @@ a:active {
     grid: 2rem 1fr / 3fr 1fr;
 
     padding: 1rem;
+    padding-bottom: 3rem;
     gap: 1rem;
 }
 
 .body-project-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(24rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
     gap: 1rem;
 }
 
@@ -178,25 +205,51 @@ a:active {
     padding: 1rem;
 
     display: grid;
-    grid: 1fr 2rem / 1fr;
-    justify-items: right;
+    grid: 7fr 1fr / 1fr;
 
     background-color: white;
     border-left: 6px solid rgb(221 211 4);
     border-radius: 10px;
 }
 
-.body-side-container {
-    display: flex;
+.project-icons-container {
+    text-align: right;
 }
 
-.announcement-container {
+.side-container {
+    display: grid;
+    grid: 4fr 1fr 4fr / 1fr;
+    
+    justify-content: center;
+}
+
+.side-container h2 {
+    padding: 1rem 0rem;
+}
+
+.announcements-container,
+.trending-container {
+    padding: 1rem;
+
+    display: grid;
+    justify-content: center;
+
     background-color: white;
     border-radius: 10px;
 }
 
 .trending-container {
+    display: grid;
+    grid: 1fr / 1fr 2fr;
+    align-items: center;
+    gap: 1rem;
+
+
     background-color: white;
     border-radius: 10px;
 }
 
+.trending-container img {
+    width: 50px;
+    border-radius: 360px;
+}
